--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
+* {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+  }
+
 body {
     text-align: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 #top-container {
@@ -29,6 +37,23 @@ body {
 }
 
 form {
+    margin: 1rem 0;
+    width: 300px;
     display: none;
+    flex-direction: column;
+    align-items: center;
+  }
+
+textarea {
+    resize: none;
 }
 
+input,
+textarea {
+  font-size: 1rem;
+  border: 1px solid black;
+  background-color: white;
+  padding: 0.5rem;
+  margin: 0.25rem 0;
+  width: 100%;
+}
