--- a/style.css
+++ b/style.css
@@ -5,9 +5,14 @@
   }
 
 body {
+    padding: 1rem;
     text-align: center;
     align-items: center;
+    display: flex;
     flex-direction: column;
+}
+ul {
+    list-style-type: none;
 }
 
 #top-container {
@@ -34,6 +39,7 @@ body {
 
 #add-new-marg {
     margin: 20px;
+    font-size: medium;
 }
 
 form {
@@ -46,6 +52,8 @@ form {
 
 textarea {
     resize: none;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 input,
@@ -56,4 +64,10 @@ textarea {
   padding: 0.5rem;
   margin: 0.25rem 0;
   width: 100%;
+ 
+}
+
+input {
+  border-radius: 10px; 
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
