--- a/style.css
+++ b/style.css
@@ -10,27 +10,49 @@ body {
     align-items: center;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
+
+h1 {
+    font-size: 70px;
+    font-weight: 600;
+    background-image: conic-gradient(#553c9a, #ee4b2b, #00c2cb, #553c9a);
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+} 
+
 ul {
     list-style-type: none;
 }
 
+button {
+    background-color:#04AA6D;
+    color: white;
+    border-radius: 10px;
+    border: 1px solid black;
+    padding: 0.5rem;
+}
+
 #top-container {
     display: flex;
-    height: 200px;
     margin: 1rem 0;
     padding: 10px;
     overflow-x: auto;
 }
 #top-container img {
     margin: 10px;
+    height: 200px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 #margarita-details {
-    margin: 50px;
+    margin: 10px;
+    
 }
 
 #margarita-details img {
    height: 400px; 
+   margin: 20px;
 }
 
 .onMouseover {
@@ -65,6 +87,11 @@ textarea {
   margin: 0.25rem 0;
   width: 100%;
  
+}
+
+input[type =submit] {
+background-color: #04AA6D;
+color: white
 }
 
 input {
