background image added

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-image: url("https://www.seriouseats.com/thmb/CapRohi9IrrbOwYZoKV63zogerM=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/__opt__aboutcom__coeus__resources__content_migration__serious_eats__seriouseats.com__recipes__images__2015__04__20150323-cocktails-vicky-wasik-margarita-c84b154e757d43688de15dc8f8ca0de9.jpg");
 }
 
 h1 {
