--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: monospace, Helvetica, sans-serif;
     box-sizing: border-box;
   }
 
