added transparency CSS for displayed stories

--- a/style.css
+++ b/style.css
@@ -147,4 +147,26 @@ input {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
+#story-wrapper {
+    margin: 25px;
+    padding: 25px;
+    width: 100%;
+    position: relative;
+}
+
+#story-background {
+        background-color: white;
+        opacity: 0.6;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+}
+#comment-story {
+    margin: 25px, 400px;
+    opacity: 1;
+    position: relative;
+}
+
 
